# utah-golf-agent

./: .gitignore  .replit  README.md  frontend_server.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run.sh  run_tests.sh  server.js  simple-server.js  standalone_scraper.py
attached_assets/: Pasted-172-31-121-162-01-Sep-2025-20-30-31-POST-api-course-requests-HTTP-1-1-500-Traceback-most-1756758655814_1756758655815.txt
frontend/: angular.json  package-lock.json  package.json  vite.config.js
frontend/src/app/: app.html  app.ts
frontend/src/app/services/: tee-time.spec.ts  tee-time.ts
frontend/src/app/tee-times/: tee-times.css  tee-times.html  tee-times.spec.ts  tee-times.ts
frontend/src/environments/: environment.prod.ts  environment.ts
src/: app.py  cache_service.py  config.py  config_full.py  main.py  models.py  request_logger.py  test.py
src/_typing/: errors.py  structs.py
src/scraper/: async_scraper.py  main.py  scraper.py
src/scraper/apis/: async_chronogolf.py  async_eaglewood.py  async_foreup.py  chronogolf.py  eaglewood.py  foreup.py  stonebridge.py  stonebridge_integration.py  v2_api.py
src/scraper/apis/auth/: stonebridge_auth.py
src/util/: exit.py  inspect_.py  misc.py  sched.py  traffic.py
