[project]
name = "utah-golf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=5.5",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.10",
    "apscheduler>=3.11.0",
    "aiohttp>=3.12.15",
]
